Fixed bug in async response consumer and added new tests